--- a/apps/web/src/styles.scss
+++ b/apps/web/src/styles.scss
@@ -6,7 +6,7 @@
 
 :root {
   color-scheme: light dark;
-  --background: #fff;
+  --background: #fafafa;
   --background-alt: #eee;
   --background-muted: #d9ceca;
   --blue-light: #dbe9fe;
@@ -27,7 +27,7 @@
   --vibrant-start: #9333ea;
   --vibrant-middle: #3b82f6;
   --vibrant-end: #4338ca;
-  --white: #fff;
+  --white: #fafafa;
 }
 
 .dark {
@@ -37,7 +37,7 @@
   --blue-light: #1d2b4a;
   --blue-mid: #1e2f5d;
   --blue-dark: #60a5fa;
-  --foreground: #fff;
+  --foreground: #fafafa;
   --foreground-muted: #a1a1a1;
   --green-light: #1c3038;
   --green-mid: #1c3a38;
