--- a/apps/web/src/styles.scss
+++ b/apps/web/src/styles.scss
@@ -127,7 +127,6 @@ body {
 
 html {
   color-scheme: light dark;
-  scroll-behavior: smooth;
 
   @include mat.theme(
     (
@@ -154,6 +153,33 @@ h3 {
 
 h1 {
   font-size: 3.75rem;
+
+  span {
+    animation: fadeInUp 0.6s cubic-bezier(0.23, 1, 0.32, 1) forwards;
+    display: inline-block;
+    margin-right: 1rem;
+    opacity: 0;
+    transform: translateY(20px);
+
+    &:nth-child(1) {
+      animation-delay: 0.04s;
+    }
+
+    &:nth-child(2) {
+      animation-delay: 0.16s;
+    }
+
+    &:nth-child(3) {
+      animation-delay: 0.28s;
+    }
+  }
+
+  @keyframes fadeInUp {
+    to {
+      opacity: 1;
+      transform: none;
+    }
+  }
 }
 
 h2 {
@@ -192,6 +218,11 @@ a {
   max-width: 1280px;
   margin: 0 auto;
   padding: 0 1.5rem;
+
+  &.column {
+    align-items: start;
+    flex-direction: column;
+  }
 }
 
 .text-tiny {
@@ -227,5 +258,78 @@ a {
 }
 
 .sub-page {
-  scroll-margin-top: 6rem;
+  scroll-margin-top: 6.5rem;
+}
+
+.sub-page-large {
+  scroll-margin-top: 8.5rem;
+}
+
+.sub-content {
+  padding: 2rem 0;
+}
+
+.card {
+  border: 1px solid var(--background-muted);
+  border-radius: 0.5rem;
+  height: 100%;
+  overflow: hidden;
+  padding: 1.5rem;
+  transition: transform 0.2s ease-out;
+
+  &:hover {
+    .highlight {
+      color: var(--foreground);
+    }
+
+    img {
+      transform: scale(1.05);
+    }
+
+    &.with-photo {
+      transform: translateY(-5px);
+    }
+  }
+
+  &.with-photo {
+    padding: 0;
+
+    img {
+      border-radius: 0.5rem 0.5rem 0 0;
+      object-fit: cover;
+      height: 12rem;
+      transition: transform 0.2s ease-out;
+      width: 100%;
+    }
+  }
+}
+
+.card-content {
+  border-radius: 0 0 0.5rem 0.5rem;
+  padding: 1.5rem;
+}
+
+.icon-heading mat-icon {
+  color: var(--red-bright);
+  margin-right: 0.75rem;
+}
+
+.columns {
+  align-items: stretch;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  width: 100%;
+
+  &.columns-2 > * {
+    flex: 0 0 calc((100% / 2) - 0.75rem);
+  }
+
+  &.columns-3 > * {
+    flex: 0 0 calc((100% / 3) - 1rem);
+  }
+}
+
+.pills > * {
+  margin: 0.5rem 0.5rem 0 0;
 }
