--- a/apps/web/src/styles.scss
+++ b/apps/web/src/styles.scss
@@ -17,8 +17,8 @@
   --foreground-muted: #5e5e5e;
   --green-light: #dcfce6;
   --green-mid: #bbf7d0;
-  --green-dark: #16a34a;
-  --green-bright: #166434;
+  --green-dark: #166434;
+  --green-bright: #16a34a;
   --navy: #0f1729;
   --red-light: #ffe3e3;
   --red-mid: #ffc9c9;
@@ -146,7 +146,8 @@ body {
 
 h1,
 h2,
-h3 {
+h3,
+h4 {
   color: var(--foreground);
   line-height: 1;
 }
@@ -198,6 +199,10 @@ h3 {
   font-size: 1.25rem;
 }
 
+h4 {
+  font-size: 1.125rem;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -235,6 +240,10 @@ a {
 
 .text-large {
   font-size: 1.25rem;
+}
+
+.text-larger {
+  font-size: 1.5rem;
 }
 
 .text-center {
@@ -310,8 +319,19 @@ a {
 }
 
 .icon-heading mat-icon {
-  color: var(--red-bright);
   margin-right: 0.75rem;
+}
+
+lib-feature-codes .icon-heading mat-icon {
+  color: var(--red-bright);
+}
+
+lib-feature-travels .icon-heading mat-icon {
+  color: var(--blue-bright);
+}
+
+lib-feature-games .icon-heading mat-icon {
+  color: var(--green-bright);
 }
 
 .columns {
@@ -327,6 +347,10 @@ a {
 
   &.columns-3 > * {
     flex: 0 0 calc((100% / 3) - 1rem);
+  }
+
+  &.columns-4 > * {
+    flex: 0 0 calc((100% / 4) - 1.125rem);
   }
 }
 
