--- a/apps/web/src/styles.scss
+++ b/apps/web/src/styles.scss
@@ -8,6 +8,7 @@
   color-scheme: light dark;
   --background: #fafafa;
   --background-alt: #eee;
+  --background-ter: #eee;
   --background-muted: #d9ceca;
   --blue-light: #dbe9fe;
   --blue-mid: #bfdbfe;
@@ -32,7 +33,8 @@
 
 .dark {
   --background: #0f1729;
-  --background-alt: #1d2839;
+  --background-alt: #0c111f;
+  --background-ter: #1d2839;
   --background-muted: #354863;
   --blue-light: #1d2b4a;
   --blue-mid: #1e2f5d;
