--- a/apps/web/src/styles.scss
+++ b/apps/web/src/styles.scss
@@ -1,11 +1,9 @@
 @use '@angular/material' as mat;
-
-////////////////////////////////////////////////////////////////////////////////
-// Variables & Dark Mode
-////////////////////////////////////////////////////////////////////////////////
+@use '../public/styles/reset';
+@use '../public/styles/global';
+@use '../public/styles/utilities';
 
 :root {
-  color-scheme: light dark;
   --background: #fafafa;
   --background-alt: #eee;
   --background-ter: #eee;
@@ -47,294 +45,4 @@
   --red-light: #302431;
   --red-mid: #512834;
   --red-dark: #ff8787;
-}
-
-////////////////////////////////////////////////////////////////////////////////
-// CSS Reset (https://www.joshwcomeau.com/css/custom-css-reset)
-////////////////////////////////////////////////////////////////////////////////
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-* {
-  margin: 0;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  html {
-    interpolate-size: allow-keywords;
-  }
-}
-
-body {
-  line-height: 1.5;
-  -webkit-font-smoothing: antialiased;
-}
-
-img,
-picture,
-video,
-canvas,
-svg {
-  display: block;
-  max-width: 100%;
-}
-
-input,
-button,
-textarea,
-select {
-  font: inherit;
-}
-
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  overflow-wrap: break-word;
-}
-
-p {
-  text-wrap: pretty;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  text-wrap: balance;
-}
-
-#root,
-#__next {
-  isolation: isolate;
-}
-
-////////////////////////////////////////////////////////////////////////////////
-// Global Styles
-////////////////////////////////////////////////////////////////////////////////
-
-html,
-body {
-  height: 100%;
-}
-
-html {
-  color-scheme: light dark;
-
-  @include mat.theme(
-    (
-      color: mat.$violet-palette,
-      density: 0,
-      typography: Inter,
-    )
-  );
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground-muted);
-  font-family: Inter, sans-serif;
-  line-height: 1.5;
-}
-
-h1,
-h2,
-h3,
-h4 {
-  color: var(--foreground);
-  line-height: 1.25;
-}
-
-h1 {
-  font-size: 3.75rem;
-
-  span {
-    animation: fadeInUp 0.6s cubic-bezier(0.23, 1, 0.32, 1) forwards;
-    display: inline-block;
-    margin-right: 1rem;
-    opacity: 0;
-    transform: translateY(20px);
-
-    &:nth-child(1) {
-      animation-delay: 0.04s;
-    }
-
-    &:nth-child(2) {
-      animation-delay: 0.16s;
-    }
-
-    &:nth-child(3) {
-      animation-delay: 0.28s;
-    }
-  }
-
-  @keyframes fadeInUp {
-    to {
-      opacity: 1;
-      transform: none;
-    }
-  }
-}
-
-h2 {
-  font-size: 1.875rem;
-
-  &.big {
-    font-size: 2.25rem;
-  }
-
-  &.huge {
-    font-size: 3rem;
-  }
-}
-
-h3 {
-  font-size: 1.25rem;
-}
-
-h4 {
-  font-size: 1.125rem;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-
-  &:hover {
-    color: var(--foreground);
-  }
-}
-
-////////////////////////////////////////////////////////////////////////////////
-// Utility Classes
-////////////////////////////////////////////////////////////////////////////////
-
-.container {
-  align-items: center;
-  display: flex;
-  justify-content: space-between;
-  margin: 0 auto;
-  max-width: 1280px;
-  padding: 0 1.5rem;
-
-  &.column {
-    align-items: start;
-    flex-direction: column;
-  }
-}
-
-.text-tiny {
-  font-size: 0.75rem;
-}
-
-.text-small {
-  font-size: 0.875rem;
-}
-
-.text-large {
-  font-size: 1.25rem;
-}
-
-.text-larger {
-  font-size: 1.5rem;
-}
-
-.text-center {
-  text-align: center;
-}
-
-.quarter-spaced {
-  margin-top: 0.25rem;
-}
-
-.single-spaced {
-  margin-top: 1rem;
-}
-
-.double-spaced {
-  margin-top: 1.5rem;
-}
-
-.triple-spaced {
-  margin-top: 2rem;
-}
-
-.sub-page {
-  scroll-margin-top: 6.5rem;
-}
-
-.sub-page-large {
-  scroll-margin-top: 8.5rem;
-}
-
-.sub-content {
-  padding: 2rem 0;
-}
-
-.icon-heading mat-icon {
-  margin-right: 0.75rem;
-}
-
-lib-feature-codes .icon-heading mat-icon {
-  color: var(--red-bright);
-}
-
-lib-feature-travels .icon-heading mat-icon {
-  color: var(--blue-bright);
-}
-
-lib-feature-games .icon-heading mat-icon {
-  color: var(--green-bright);
-}
-
-.columns {
-  align-items: stretch;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1.5rem;
-  width: 100%;
-
-  &.columns-2 > * {
-    flex: 0 0 calc((100% / 2) - 0.75rem);
-  }
-
-  &.columns-3 > * {
-    flex: 0 0 calc((100% / 3) - 1rem);
-  }
-
-  &.columns-4 > * {
-    flex: 0 0 calc((100% / 4) - 1.125rem);
-  }
-}
-
-.pills > * {
-  margin: 0.5rem 0.5rem 0 0;
-}
-
-.photo-link {
-  border-radius: 0.5rem;
-  display: block;
-  height: 100%;
-  overflow: hidden;
-
-  &:hover {
-    img {
-      transform: scale(1.05);
-    }
-  }
-
-  img {
-    height: 100%;
-    object-fit: cover;
-    transition: transform 0.2s ease-out;
-  }
 }
