--- a/apps/web/public/styles/utilities.scss
+++ b/apps/web/public/styles/utilities.scss
@@ -97,7 +97,7 @@
 }
 
 ////////////////////////////////////////////////////////////////////////////////
-// Icon Heading (@TODO: Move to component)
+// Icon Heading
 ////////////////////////////////////////////////////////////////////////////////
 
 .icon-heading mat-icon {
