--- a/apps/web/src/styles.scss
+++ b/apps/web/src/styles.scss
@@ -11,7 +11,7 @@
   --blue-light: #dbe9fe;
   --blue-mid: #bfdbfe;
   --blue-dark: #2463eb;
-  --blue-bright: #1d40af;
+  --blue-bright: #2563eb;
   --foreground: #000;
   --foreground-muted: #5e5e5e;
   --green-light: #dcfce6;
@@ -22,7 +22,7 @@
   --red-light: #ffe3e3;
   --red-mid: #ffc9c9;
   --red-dark: #fa5353;
-  --red-bright: #c92a2a;
+  --red-bright: #fa5252;
   --vibrant-start: #9333ea;
   --vibrant-middle: #3b82f6;
   --vibrant-end: #4338ca;
