--- a/apps/web/public/styles/utilities.scss
+++ b/apps/web/public/styles/utilities.scss
@@ -19,20 +19,25 @@
 .columns {
   align-items: stretch;
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   gap: 1.5rem;
   width: 100%;
 
-  &.columns-2 > * {
-    flex: 0 0 calc((100% / 2) - 0.75rem);
-  }
+  @media (min-width: 900px) {
+    flex-direction: row;
 
-  &.columns-3 > * {
-    flex: 0 0 calc((100% / 3) - 1rem);
-  }
+    &.columns-2 > * {
+      flex: 0 0 calc((100% / 2) - 0.75rem);
+    }
 
-  &.columns-4 > * {
-    flex: 0 0 calc((100% / 4) - 1.125rem);
+    &.columns-3 > * {
+      flex: 0 0 calc((100% / 3) - 1rem);
+    }
+
+    &.columns-4 > * {
+      flex: 0 0 calc((100% / 4) - 1.125rem);
+    }
   }
 }
 
